infrastructure/kubernetes/manifests/argo/ingress.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  name: argo-ingress
  namespace: argo
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: forward
    ingress.kubernetes.io/auth-url: http://traefik-forward-auth
    ingress.kubernetes.io/auth-response-headers: X-Forwarded-User
spec:
  rules:
    - host: argo.muwazana.com
      http:
        paths:
          - backend:
              serviceName: argo-server
              servicePort: 2746
